Added some methods
